add_executable(inetaddress_unittest InetAddress_unittest.cpp)
target_link_libraries(inetaddress_unittest zhengqi_networking)
add_test(NAME inetaddress_unittest COMMAND inetaddress_unittest)
add_executable(buffer_unittest Buffer_unittest.cpp)
target_link_libraries(buffer_unittest zhengqi_networking)
add_test(NAME buffer_unittest COMMAND buffer_unittest)
add_executable(eventloop_unittest EventLoop_unittest.cpp)
target_link_libraries(eventloop_unittest zhengqi_networking)
add_executable(eventloopthread_unittest EventLoopThread_unittest.cpp)
target_link_libraries(eventloopthread_unittest zhengqi_networking)
add_executable(eventloopthreadpool_unittest EventLoopThreadPool_unittest.cpp)
target_link_libraries(eventloopthreadpool_unittest zhengqi_networking)
add_executable(channel_test Channel_test.cpp)
target_link_libraries(channel_test zhengqi_networking)
add_executable(echoserver_unittest EchoServer_unittest.cpp)
target_link_libraries(echoserver_unittest zhengqi_networking)
add_executable(echoclient_unittest EchoClient_unittest.cpp)
target_link_libraries(echoclient_unittest zhengqi_networking)
add_executable(tcpclient_reg1 TcpClient_reg1.cpp)
target_link_libraries(tcpclient_reg1 zhengqi_networking)
add_executable(tcpclient_reg2 TcpClient_reg2.cpp)
target_link_libraries(tcpclient_reg2 zhengqi_networking)
add_executable(tcpclient_reg3 TcpClient_reg3.cpp)
target_link_libraries(tcpclient_reg3 zhengqi_networking)
