add_executable(mutex_test Mutex_test.cpp)
target_link_libraries(mutex_test zhengqi_utility)
add_executable(singleton_test Singleton_test.cpp)
target_link_libraries(singleton_test zhengqi_utility)
add_executable(countdownlatch_test CountDownLatch_test.cpp)
target_link_libraries(countdownlatch_test zhengqi_utility)
add_executable(thread_test Thread_test.cpp)
target_link_libraries(thread_test zhengqi_utility)
add_executable(threadPool_test ThreadPool_test.cpp)
target_link_libraries(threadPool_test zhengqi_utility)
