set(CMAKE_EXPORT_COMPILE_COMMANDS on)
add_executable(mutex_test Mutex_test.cpp)
target_link_libraries(mutex_test zhengqi_utility)
add_executable(singleton_test Singleton_test.cpp)
target_link_libraries(singleton_test zhengqi_utility)
add_executable(countdownlatch_test CountDownLatch_test.cpp)
target_link_libraries(countdownlatch_test zhengqi_utility)
add_executable(thread_test Thread_test.cpp)
target_link_libraries(thread_test zhengqi_utility)
add_executable(threadPool_test ThreadPool_test.cpp)
target_link_libraries(threadPool_test zhengqi_utility)
add_executable(blockingQueue_test BlockingQueue_test.cpp)
target_link_libraries(blockingQueue_test zhengqi_utility)
add_executable(blockingQueue_bench BlockingQueue_bench.cpp)
target_link_libraries(blockingQueue_bench zhengqi_utility)
add_executable(blockingQueue_bench2 BlockingQueue_bench2.cpp)
target_link_libraries(blockingQueue_bench2 zhengqi_utility)
add_executable(logStream_test LogStream_test.cpp)
target_link_libraries(logStream_test zhengqi_utility)
add_test(NAME logStream_test COMMAND logStream_test --success)
add_executable(logStream_bench LogStream_bench.cpp)
target_link_libraries(logStream_bench zhengqi_utility)
add_executable(threadLocal_test ThreadLocal_test.cpp)
target_link_libraries(threadLocal_test zhengqi_utility)
add_executable(threadLocalSingleton_test ThreadLocalSingleton_test.cpp)
target_link_libraries(threadLocalSingleton_test zhengqi_utility)
add_executable(date_unittest Date_unitest.cpp)
target_link_libraries(date_unittest zhengqi_utility)
add_test(NAME date_unittest COMMAND date_unittest)
add_executable(timezone_util TimeZone_util.cpp)
target_link_libraries(timezone_util zhengqi_utility)
add_executable(timezone_unittest TimeZone_unittest.cpp)
target_link_libraries(timezone_unittest zhengqi_utility)
add_test(NAME timezone_unittest COMMAND timezone_unittest)
add_executable(timestamp_unittest Timestamp_unittest.cpp)
target_link_libraries(timestamp_unittest zhengqi_utility)
add_test(NAME timestamp_unittest COMMAND timestamp_unittest)
add_executable(logging_test Logging_test.cpp)
target_link_libraries(logging_test zhengqi_utility)
add_executable(asynclogging_test AsyncLogging_test.cpp)
target_link_libraries(asynclogging_test zhengqi_utility)